--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
   <header>
-    <h1>My Research Blog</h1>
+    <h1>João Gonçalves</h1>
     <p>Sailing the seas of finance</p>
   </header>
 
