--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 </head>
 <body>
   <header>
+<header style="display: flex; align-items: center; gap: 1rem; margin-bottom: 3rem;">
+  <img src="assets/profile.jpg" alt="Profile photo" style="width: 64px; height: 64px; border-radius: 50%;">
+</header>
     <h1>João Gonçalves</h1>
     <p>Sailing the seas of finance</p>
   </header>
