--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Georgia, serif;
-      background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(255,255,255,0.6)), url('B.jpg') no-repeat center center fixed;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(255,255,255,0.6)), url('A.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #222;
       line-height: 1.6;
