--- a/index.html
+++ b/index.html
@@ -51,6 +51,32 @@
       color: #444;
     }
   </style>
+
+<header style="
+  background: url('background-header.jpg') center/cover no-repeat;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 3rem;
+  color: white;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+">
+  <img src="A.jpg" alt="Profile photo" style="
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 3px solid white;
+  ">
+  <div>
+    <h1 style="margin: 0;">João Gonçalves</h1>
+    <p style="margin: 0;">Sailing the seas of finance</p>
+  </div>
+</header>
+
+  
 </head>
 <body>
 
