--- a/index.html
+++ b/index.html
@@ -1,28 +1,54 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Research Blog</title>
+  <title>João Gonçalves – Blog</title>
   <style>
     body {
       font-family: Georgia, serif;
-      background: #fff;
-      color: #222;
-      line-height: 1.6;
       margin: 0;
-      padding: 2rem;
-      max-width: 750px;
-      margin-left: auto;
-      margin-right: auto;
+      padding: 0;
+      color: #222;
     }
-    header {
+    .hero {
+      background: url('B.jpg') no-repeat center center;
+      background-size: cover;
+      height: 350px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 2rem 5%;
+    }
+    .hero h1 {
+      font-size: 2rem;
+      color: black;
+      margin: 0;
+    }
+    .hero .nav {
+      display: flex;
+      gap: 1rem;
+    }
+    .hero .nav a {
+      color: black;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .hero .nav a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      max-width: 750px;
+      margin: 2rem auto;
+      padding: 0 2rem;
+    }
+    .about {
+      text-align: center;
       margin-bottom: 3rem;
     }
-    header h1 {
+    .about h2 {
       font-size: 2.5rem;
-      margin: 0;
+      margin-bottom: 1rem;
     }
     .post-list {
       list-style: none;
@@ -43,55 +69,15 @@
       text-decoration: underline;
     }
     .post-meta {
-      font-size: 1.5rem;
+      font-size: 0.9rem;
       color: #666;
     }
     .excerpt {
       margin-top: 0.5rem;
       color: #444;
     }
-
-    .hero-header {
-  background: url('background-header.jpg') center/cover no-repeat;
-  height: 400px;
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-}
-
-.hero-overlay {
-  background-color: rgba(0, 0, 0, 0.4); /* optional dark overlay for contrast */
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  padding-left: 2rem;
-  color: white;
-}
-
-.hero-content {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.profile-pic {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  border: 3px solid white;
-}
-
   </style>
-
-<header class="hero-header">
-  <div class="hero-overlay">
-    <div class="hero-content">
-      <img src="B.jpg" alt="Profile photo" class="profile-pic">
-    </div>
-  </div>
-</header>
-
+</head>
 
   
 </head>
