--- a/index.html
+++ b/index.html
@@ -3,52 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>João Gonçalves – Blog</title>
+  <title>My Research Blog</title>
   <style>
     body {
       font-family: Georgia, serif;
-      margin: 0;
-      padding: 0;
+      background: #fff;
       color: #222;
-    }
-    .hero {
-      background: url('B.jpg') no-repeat center center;
-      background-size: cover;
-      height: 350px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 2rem 5%;
-    }
-    .hero h1 {
-      font-size: 2rem;
-      color: black;
+      line-height: 1.6;
       margin: 0;
-    }
-    .hero .nav {
-      display: flex;
-      gap: 1rem;
-    }
-    .hero .nav a {
-      color: black;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .hero .nav a:hover {
-      text-decoration: underline;
-    }
-    .container {
+      padding: 2rem;
       max-width: 750px;
-      margin: 2rem auto;
-      padding: 0 2rem;
+      margin-left: auto;
+      margin-right: auto;
     }
-    .about {
-      text-align: center;
+    header {
       margin-bottom: 3rem;
     }
-    .about h2 {
+    header h1 {
       font-size: 2.5rem;
-      margin-bottom: 1rem;
+      margin: 0;
     }
     .post-list {
       list-style: none;
@@ -69,7 +42,7 @@
       text-decoration: underline;
     }
     .post-meta {
-      font-size: 0.9rem;
+      font-size: 1.5rem;
       color: #666;
     }
     .excerpt {
@@ -77,9 +50,6 @@
       color: #444;
     }
   </style>
-</head>
-
-  
 </head>
 <body>
 
