--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       </li>
 
     </ul>
+ <footer>
+      <p>Connect with me: <a href="https://www.linkedin.com/in/joão-gonçalves-7b6930182/" target="_blank">LinkedIn</a> | Email: <a href="mailto:joao@example.com">joao@example.com</a></p>
+    </footer>
+
+    
   </div>
 </body>
 </html>
