--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     </ul>
  <footer>
-      <p>Connect with me: <a href="https://www.linkedin.com/in/joão-gonçalves-7b6930182/" target="_blank">LinkedIn</a> | Email: <a href="mailto:joao@example.com">joao@example.com</a></p>
+      <p>Connect with me: <a href="https://www.linkedin.com/in/joão-gonçalves-7b6930182/" target="_blank">LinkedIn</a> | Email: <a href="mailto:joaoprgoncalves_@outlook.pt">joaoprgoncalves_@outlook.pt</a></p>
     </footer>
 
     
