--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
   <div class="content">
     <header>
-      <img src="profile.jpg" alt="Profile photo" />
+      <img src="IMG_0920 2.jpg" alt="Profile photo" />
       <div>
         <h1>João Gonçalves</h1>
         <p>Sailing the seas of finance</p>
