--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
     }
 
     @media (max-width: 600px) {
+      .banner {
+        height: 300px;
+        background-position: center top;
+        background-size: cover;
+      }
+
       .content {
         padding: 1.2rem;
         margin-top: -50px;
@@ -152,7 +158,7 @@
 
   <div class="content">
     <header>
-      <img src="IMG_0920 2.jpg" alt="Profile photo" />
+      <img src="profile.jpg" alt="Profile photo" />
       <div>
         <h1>João Gonçalves</h1>
         <p>Sailing the seas of finance</p>
